--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@svgr/plugin-jsx": "^8.1.0",
+    "@svgr/plugin-svgo": "^8.1.0",
     "@tailwindcss/vite": "^4.1.7",
     "lucide-react": "^0.518.0",
     "react": "^19.1.0",
@@ -17,7 +19,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "styled-components": "^6.1.18",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
